--- a/style.css
+++ b/style.css
@@ -4,11 +4,19 @@
   box-sizing: border-box;
 }
 
+ul,
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
 body {
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
 }
-
 
 /* General styles */
 .container {
@@ -46,17 +54,14 @@ body {
   opacity: 1;
 }
 
+/* Navbar */
 .navbar {
-  background: #2F343A;
+  background: #2f343a;
   color: #ffffff;
-}
-
-.navbar ul li {
-  list-style: none;
+  padding: 27px 0;
 }
 
 .navbar .container {
-  padding: 30px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -68,7 +73,7 @@ body {
   justify-content: center;
 }
 
-.navbar .container .logo img:first-child {
+.navbar .container .logo img.border {
   border-right: 1px solid #ffffff;
   padding-right: 30px;
   margin-right: 30px;
@@ -78,15 +83,370 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  text-decoration: none;
-  color: #ffffff;
   gap: 10px;
+}
+
+.navbar .container .logo .location span {
+  color: #ffffff;
   font-size: 14px;
 }
 
 .navbar .container .menu {
   display: flex;
-  gap: 20px;
+  /* align-items: center; */
+  /* justify-content: space-between; */
+  gap: 30px;
 }
+
+.navbar .container .menu .link {
+  font-size: 14px;
+  text-transform: uppercase;
+}
+
+/* Main */
+.main {
+  background-image: url(./images/Rectangle\ 2.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  padding: 125px 0 55px;
+}
+
+.main .block {
+  color: #ffffff;
+  text-align: center;
+  border: 1px solid #c8a35f;
+  width: 920px;
+  margin: 0 auto;
+  padding: 45px 0;
+}
+
+.main .block h1 {
+  font-size: 64px;
+  font-weight: 700;
+  font-family: 'Roboto', sans-serif;
+}
+
+.main .block p {
+  font-size: 18px;
+  line-height: 28px;
+  width: 777px;
+  margin: 45px auto 0;
+}
+
+.main .mouse {
+  text-align: center;
+  margin-top: 110px;
+}
+
+/* services */
+
+.services .container:first-child{
+  float: left;
+  background: #2f343a;
+  width: 100%;
+  height: 100vh;
+}
+
+.services .container .block {
+  border: 1px solid #393F47;
+  background: #393F47;
+  width: 560px;
+  height: 600px;
+}
+
+.services .container .block-2{
+  border: 1px solid #393F47;
+  background: #393F47;
+  width: 560px;
+  height: 600px;
+  margin-left: 171.5%;
+}
+
+.services .container .border {
+  border: 3px solid #c8a35f;
+  width: 90px;
+  margin-left: 206px;
+  margin-top: -500px;
+}
+
+.services .container .service-text h1{
+  font-size: 60px;
+  font-weight: 700;
+  margin-left: 206px;
+  margin-top: 30px;
+  color: #ffffff;
+}
+
+.services .container .service-text p{
+  font-size: 18px;
+  line-height: 28px;
+  margin-left: 206px;
+  margin-top: 20px;
+  color: #ffffff;
+}
+
+.services .container .btn {
+  border: 1px solid #c8a35f;
+  background: #c8a35f;
+  color: #ffffff;
+  width: 220px;
+  height: 55px;
+  margin-left: 206px;
+  margin-top: 30px;
+  padding: 10px;
+}
+
+.services .container .btn .btn-hover {
+  font-size: 16px;
+  font-weight: 500;
+  text-align: center;
+  margin: 8px;
+}
+
+.services .container .service-image img{
+  margin-left: 650px;
+  margin-top: -340px;
+
+}
+
+.services .container .next {
+  margin-left: 1080px;
+  margin-top: -800px;
+}
+
+.services .container .right {
+  margin-left: 50px;
+  margin-top: -300px;
+}
+
+.services .container .back {
+  margin-left: 1080px;
+  margin-top: 230px;
+}
+
+.services .container .left {
+  margin-left: 50px;
+}
+
+/* item */
+
+.item .container {
+  background-color: #2f343a;
+  width: 100%;
+  height: 1050px;
+}
+
+.item .container .line {
+  border: 1px solid #c8a35f;
+  border: 3px solid #c8a35f;
+  width: 90px;
+  margin-left: 206px;
+  margin-top: 300px;
+}
+
+.text {
+  font-weight: 700;
+  line-height: 50px;
+  margin-left: 206px;
+  margin-top: 30px;
+  font-size: 40px;
+  color: #ffffff;
+}
+
+.item .container .pilot {
+  border: 1px solid #c8a35f;
+  background: #c8a35f;
+  width: 276px;
+  height: 180px;
+  margin-left: 206px;
+  margin-top: 80px;
+}
+
+.item .container .pilot .sircle {
+  border: 1px solid #ffffff;
+  background: #ffffff;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  margin: 0 auto;
+  margin-top: 50px;
+}
+
+.item .container .pilot .sircle .air{
+  margin-left: 18px;
+  margin-top: 20px;
+}
+
+.item .container .pilot .air-text {
+  text-align: center;
+  font-size: 18px;
+  color: #ffffff;
+  font-weight: 700;
+  margin-top: 12px;
+}
+
+.item .container .pilot-2 {
+  border: 1px solid #393F47;
+  background: #393F47;
+  width: 276px;
+  height: 180px;
+  margin-left: 276px;
+  margin-top: -155px;
+}
+
+.item .container .pilot-2 .air-2 {
+  margin-left: 120px;
+  margin-top: 73px;
+}
+
+.item .container .pilot-2 .air-text-2 {
+  text-align: center;
+  font-size: 18px;
+  color: #ffffff;
+  font-weight: 700;
+  margin-top: 25px;
+}
+
+.item .container .pilot-3 {
+  border: 1px solid #393F47;
+  background: #393F47;
+  width: 276px;
+  height: 180px;
+  margin-left: 553px;
+  margin-top: -180px;
+}
+
+.item .container .pilot-3 .air-3 {
+  margin-left: 120px;
+  margin-top: 73px;
+}
+
+.item .container .pilot-3 .air-text-3 {
+  text-align: center;
+  font-size: 18px;
+  color: #ffffff;
+  font-weight: 700;
+  margin-top: 25px;
+}
+
+.item .container .pilot-4 {
+  border: 1px solid #393F47;
+  background: #393F47;
+  width: 276px;
+  height: 180px;
+  margin-left: 830px;
+  margin-top: -180px;
+}
+
+.item .container .pilot-4 .air-4 {
+  margin-left: 120px;
+  margin-top: 73px;
+}
+
+.item .container .pilot-4 .air-text-4 {
+  text-align: center;
+  font-size: 18px;
+  color: #ffffff;
+  font-weight: 700;
+  margin-top: 25px;
+}
+
+.item .container .pilot-5 {
+  border: 1px solid #393F47;
+  background: #393F47;
+  width: 276px;
+  height: 180px;
+  margin-left: -0.3px;
+  margin-top: 2px;
+}
+
+.item .container .pilot-5 .air-5 {
+  margin-left: 120px;
+  margin-top: 73px;
+}
+
+.item .container .pilot-5 .air-text-5 {
+  text-align: center;
+  font-size: 18px;
+  color: #ffffff;
+  font-weight: 700;
+  margin-top: 25px;
+}
+
+.item .container .pilot-6 {
+  border: 1px solid #393F47;
+  background: #393F47;
+  width: 276px;
+  height: 180px;
+  margin-left: 276px;
+  margin-top: -180px;
+}
+
+.item .container .pilot-6 .air-6 {
+  margin-left: 120px;
+  margin-top: 73px;
+}
+
+.item .container .pilot-6 .air-text-6 {
+  text-align: center;
+  font-size: 18px;
+  color: #ffffff;
+  font-weight: 700;
+  margin-top: 25px;
+}
+
+.item .container .pilot-7 {
+  border: 1px solid #393F47;
+  background: #393F47;
+  width: 276px;
+  height: 180px;
+  margin-left: 553px;
+  margin-top: -180px;
+}
+
+.item .container .pilot-7 .air-7 {
+  margin-left: 120px;
+  margin-top: 73px;
+}
+
+.item .container .pilot-7 .air-text-7 {
+  text-align: center;
+  font-size: 18px;
+  color: #ffffff;
+  font-weight: 700;
+  margin-top: 25px;
+}
+
+.item .container .pilot-8 {
+  border: 1px solid #393F47;
+  background: #393F47;
+  width: 276px;
+  height: 180px;
+  margin-left: 830px;
+  margin-top: -180px;
+}
+
+.item .container .pilot-8 .air-8 {
+  margin-left: 120px;
+  margin-top: 73px;
+}
+
+.item .container .pilot-8 .air-text-8 {
+  text-align: center;
+  font-size: 18px;
+  color: #ffffff;
+  font-weight: 700;
+  margin-top: 25px;
+}
+
+
+
+
+
+
+
+
+
 
 
